--- a/style.css
+++ b/style.css
@@ -98,6 +98,28 @@ header {
   #title-2 h1 {
     color: white; }
 
+#anim {
+  margin-top: 5cm; }
+  #anim .column {
+    height: 180px;
+    transition: 300ms;
+    overflow: hidden; }
+    #anim .column.active {
+      height: 100vh;
+      width: 100vw; }
+    #anim .column:nth-child(1) {
+      background-color: lightblue; }
+    #anim .column:nth-child(2) {
+      background-color: lightgreen; }
+    #anim .column:nth-child(3) {
+      background-color: lightsalmon; }
+    #anim .column:nth-child(4) {
+      background-color: gray; }
+    #anim .column:nth-child(5) {
+      background-color: lightpink; }
+    #anim .column:nth-child(6) {
+      background-color: violet; }
+
 /* Homepage */
 
 /*# sourceMappingURL=style.css.map */
