--- a/style.scss
+++ b/style.scss
@@ -137,6 +137,40 @@ header {
 	}
 }
 
+#anim {
+	margin-top: 5cm;
+	.column {
+		height: 180px;
+		transition: 300ms;
+		overflow: hidden;
+		
+		&.active {
+			height: 100vh;
+			width: 100vw;
+		}
+
+		&:nth-child(1) {
+			background-color: lightblue;
+		}
+		&:nth-child(2) {
+			background-color: lightgreen;
+		}
+		&:nth-child(3) {
+			background-color: lightsalmon;
+		}
+		&:nth-child(4) {
+			background-color: gray;
+		}
+		&:nth-child(5) {
+			background-color: lightpink;
+		}
+		&:nth-child(6) {
+			background-color: violet;
+		}
+
+	}
+}
+
 
 
 /* Homepage */
